# yucky-ewwii

./: 404.html  Cargo.toml  LICENSE  README.md  additionals.html  eww.yuck  installation.html  introduction.html  main.yuck  migration.html  print.html  rustfmt.toml  searchindex.js  toc.html  toc.js
.github/workflows/: gh-pages.yml
docs/: book.toml
docs/js/: home_button.js
docs/src/: SUMMARY.md  additionals.md  installation.md  introduction.md  migration.md
docs/theme/: index.hbs
src/: convert.rs  errors.rs  lib.rs  simplexpr.rs  widgets.rs
theme/: ewwii.css
