[package]
name = "yucky-ewwii"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"] 

[dependencies]
ewwii_plugin_api = "1.0.0"
yuck = { git = "https://github.com/elkowar/eww", branch = "master", version = "0.1.0" }
simplexpr = { git = "https://github.com/elkowar/eww", branch = "master", version = "0.1.0" }
eww_shared_util = { git = "https://github.com/elkowar/eww", branch = "master", version = "0.1.0" }

# reporting errors
ariadne = "0.6.0"
heck = "0.5.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
